# vrteleop

./: .gitignore  CMakeLists.txt  package.xml
include/: compressedpointcloud.h  compression_defs.h  pcl_utils.h  ros_msg_convert.h
launch/: fake-kinect.launch  kinect-real.launch  kinect-stub.launch  pc-robot-real.launch  pc-robot-stub.launch  pc-vr.launch  pcl-pipeline.launch  pcl-preprocessing.launch  real-kinect.launch  rosbridge.launch  vizualisation.launch
msg/: CompressedPointCloud2.msg  HeaderlessPointCloud2.msg  Polygon.msg  PolygonMesh.msg  VRMotionController.msg
scripts/: dropper.py  forwarder.py
src/: moving_least_squares.cpp  pcl_compression.cpp  pcl_decompression.cpp  pcl_meshing.cpp  pcl_moving_least_squares.cpp  pcl_unmeshing.cpp  ros_msg_convert.cpp
